syntax = "proto3";
package pb;
import "game_code.proto";

// 代理申请
message CAgentJoin
{
    string agentname = 1;//名字
    string agentid = 2;//代理id
    string realname = 3;//真实姓名
    string weixin = 4;//微信
}

message SAgentJoin
{
    uint32 level = 1;//代理等级
    ErrCode error= 2;//错误码 ,0:正常
}

// 代理信息
message CMyAgent
{
}

message SMyAgent
{
    string agentname = 1;//名字
    string agentid = 2;//绑定的代理id
    string address = 3;//地址
    int64 profit = 4;//玩家收益
    int64 WeekProfit = 5;//本周收益
    int64 WeekPlayerProfit = 6;//本周玩家业绩
    int64 HistoryProfit = 7;//历史收益
    int64 SubPlayerProfit = 8;//下属玩家业绩
    int64 SubAgentProfit = 9;//下属代理业绩
    string PopularizeURL = 10;//推广地址
    uint32 state = 11;//0不是代理,1开通代理,2审核中
    uint32 level = 12;//代理等级
    uint32 Build = 13;//下属绑定玩家数量
    uint32 AgentChild = 14;//下属代理数量
    uint32 BuildVaild = 15;//下属有效绑定数量
    uint32 ProfitRate = 16;//区域百分比
    int64 ProfitMonth = 17;//区域收益数量
    int32 AgentTitle = 18;//代理头衔4玩家，3普通，2大代理，1合伙人
    ErrCode error= 19;//错误码 ,0:正常
    int64 profitFirst = 20;//一级收益
    int64 profitSecond = 21;//二级收益
    int64 profitLastMonth = 22;//上月区域收益
}

// 代理管理
message CAgentManage
{
    uint32 page = 1;//页数
    string agentid = 2;//代理id,查询参数
    string userid = 3;//玩家id,server参数
}

message SAgentManage
{
    uint32 page = 1;//页数
    uint32 count = 2;//总数
    repeated AgentManage list = 3;//列表
    ErrCode error= 4;//错误码 ,0:正常
}

message AgentManage
{
    string agentid = 1;//代理id
    string address = 2;//地址
    uint32 num = 3;//下级人数
    int64 profit = 4;//当前收益
    uint32 level = 5;//代理等级
    uint32 rate = 6;//区域收益百分比
    int32 AgentTitle = 7;//代理头衔4玩家，3普通，2大代理，1合伙人
}

// 代理区域管理
message CAgentProfitManage
{
    uint32 page = 1;//页数
    string agentid = 2;//id,查询参数
    string agentnote = 3;//查询参数
    uint32 rate = 4;//查询参数
    string startTime = 5;//收益日期时间,查询参数,2018/7/30 11:27:49
    string endTime = 6;//收益日期时间,查询参数,2018/7/30 11:27:49
    string userid = 7;//玩家id,server参数
}

message SAgentProfitManage
{
    uint32 page = 1;//页数
    uint32 count = 2;//总数
    repeated AgentProfitManage list = 3;//列表
    ErrCode error= 4;//错误码 ,0:正常
    int64 total = 5;//时段区域总收益
}

message AgentProfitManage
{
    string agentid = 1;//id
    string nickname = 2;//昵称
    string agentnote = 3;//备注
    uint32 rate = 4;//区域收益百分比
    uint32 level = 5;//代理等级
    int32 AgentTitle = 6;//代理头衔4玩家，3普通，2大代理，1合伙人
    int64 bringProfit = 7;//贡献收益
}

// 代理备注
message CSetAgentNote
{
    string userid = 1;//玩家id
    string agentnote = 2;//备注
    string selfid = 3;//审批玩家id,server参数
}

message SSetAgentNote
{
    string userid = 1;//玩家id
    string agentnote = 2;//备注
    ErrCode error= 3;//错误码 ,0:正常
}

message SetAgentNote
{
    string userid = 1;//玩家id
    string agentnote = 2;//备注
}

// 代理收益明细
message CAgentProfit
{
    uint32 page = 1;//页数
    string time = 2;//收益日期时间,查询参数,2018/7/30 11:27:49
    uint32 level = 3;//收益等级
    string agentid = 4;//代理id,server参数
}

message SAgentProfit
{
    uint32 page = 1;//页数
    uint32 count = 2;//总数
    repeated AgentProfitDetail list = 3;//列表
    ErrCode error= 4;//错误码 ,0:正常
}

message AgentProfitDetail
{
    string userid = 1;//代理id
    int64 profit = 2;//收益
    uint32 level = 3;//收益等级
    int32  gtype = 4;//game type
    uint32 rate = 5;//收益比例
    int32  type = 6;//type,(收益，区域，区域发放)
}

// 代理天收益明细
message CAgentDayProfit
{
    uint32 page = 1;//页数
    string startTime = 2;//收益日期时间,查询参数,2018/7/30 11:27:49
    string endTime = 3;//收益日期时间,查询参数,2018/7/30 11:27:49
    string agentnote = 4;//备注,查询参数
    string userid = 5;//玩家id,查询参数
    string selfid = 6;//玩家id,server参数
}

message SAgentDayProfit
{
    uint32 page = 1;//页数
    uint32 count = 2;//总数
    repeated AgentDayProfitDetail list = 3;//列表
    ErrCode error= 4;//错误码 ,0:正常
    int64 total = 5;//总收益
}

message AgentDayProfitDetail
{
    string userid = 1;//代理id
    int64 profit = 2;//玩家收益
    uint32 day = 3;//日期20180728
    string agentnote = 4;//备注
    string nickname = 5;//昵称
    int64 profitFirst = 6;//一级收益
    int64 profitSecond = 7;//二级收益
    int64 profitMonth = 8;//区域收益
}

// 代理收益提现订单明细
message CAgentProfitOrder
{
    uint32 page = 1;//页数
    uint32 type = 2;//0下级的订单,1自己的订单
    string startTime = 3;//收益日期时间,查询参数,2018/7/30 11:27:49
    string endTime = 4;//收益日期时间,查询参数,2018/7/30 11:27:49
    string agentid = 5;//代理id,server参数
}

message SAgentProfitOrder
{
    uint32 page = 1;//页数
    uint32 count = 2;//总数
    repeated AgentProfitOrder list = 3;//列表
    uint32 type = 4;//0下级的订单,1自己的订单
    ErrCode error= 5;//错误码 ,0:正常
}

message AgentProfitOrder
{
    string orderid = 1;//id
    string userid = 2;//玩家id
    string nickname = 3;//玩家昵称
    int64 profit = 4;//提取金额
    string applytime = 5;//提单时间
    string replytime = 6;//响应时间
    int32 state = 7;//状态,0等待处理,1成功,2失败
}

// 代理收益提现申请
message CAgentProfitApply
{
    uint32 profit = 1;//提取金额
}

message SAgentProfitApply
{
    uint32 profit = 1;//提取金额
    ErrCode error= 2;//错误码 ,0:正常
}

// 代理收益提现受理
message CAgentProfitReply
{
    string orderid = 1;//orderid
    int32 state = 2;//状态,1同意,2拒绝
}

message SAgentProfitReply
{
    string orderid = 1;//orderid
    int32 state = 2;//状态,1同意,2拒绝
    int64 profit = 3;//提取金额
    ErrCode error= 4;//错误码 ,0:正常
}

// 代理收益排行榜
message CAgentProfitRank
{
    uint32 page = 1;//页数
}

message SAgentProfitRank
{
    uint32 page = 1;//页数
    uint32 count = 2;//总数
    repeated AgentProfit list = 3;//列表
    ErrCode error= 4;//错误码 ,0:正常
}

message AgentProfit
{
    string nickname = 1;//玩家昵称
    string address = 2;//地址
    string userid = 3;//玩家id
    int64 profit = 4;//当前收益
}

// 代理玩家管理
message CAgentPlayerManage
{
    uint32 page = 1;//页数
    string userid = 2;//玩家id,查询参数
    AgentApproveState state = 3;//状态，0审批中或玩家，1通过，2拒绝
    string agentnote = 4;//备注,查询参数
    uint32 level = 5;//收益等级,查询参数,0全部,1玩家,2一级代理,3未合格
    string selfid = 6;//玩家id,server参数
}

message SAgentPlayerManage
{
    uint32 page = 1;//页数
    uint32 count = 2;//总数
    repeated AgentPlayerManage list = 3;//列表
    AgentApproveState state = 4;//状态，0审批中或玩家，1通过，2拒绝
    ErrCode error= 5;//错误码 ,0:正常
}

message AgentPlayerManage
{
    string userid = 1;//玩家id
    string nickname = 2;//昵称
    int64 coin = 3;//金币
    string agentid = 4;//代理id
    string address = 5;//地址
    string agentname = 6;//名字
    uint32 level = 7;//代理等级
    uint32 profitRate = 8;//收益占比
    string jointime = 9;//加入时间
    uint32 state = 10;//状态，0不是代理,1开通代理,2审核中
    string loginTime = 11;//最后登录时间
    string agentnote = 12;//备注
    int64 bringProfit = 13;//贡献收益
}

// 代理玩家申请审批
message CAgentPlayerApprove
{
    AgentApproveState state = 1;//1同意，2拒绝
    string userid = 2;//申请玩家id
    string selfid = 3;//审批玩家id,server参数
}

message SAgentPlayerApprove
{
    AgentApproveState state = 1;//1同意，2拒绝
    string userid = 2;//玩家id
    ErrCode error= 3;//错误码 ,0:正常
}

//设置区域奖励
message CSetAgentProfitRate
{
    string userid = 1;//玩家id
    uint32 rate = 2;//百分比,增量
    string selfid = 3;//玩家id,server参数
}

message SSetAgentProfitRate
{
    string userid = 1;//玩家id
    uint32 rate = 2;//百分比
    uint32 rest = 3;//剩余百分比
    ErrCode error= 4;//错误码 ,0:正常
}

// 获取上级代理
message CGetAgent
{
    string agentid = 1;//代理id,server参数
}

message SGetAgent
{
    string agentid = 1;//
    string nickname = 2;//
    string agentname = 3;//
    string realname = 4;//真实姓名
    string weixin = 5;//微信
    bool vaild = 6;//是否合格
    ErrCode error= 7;//错误码 ,0:正常
}